k8s/ingress-dev/deploy/fastapi-worker1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app1
  labels:
    app: fastapi1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi1
  template:
    metadata:
      labels:
        app: fastapi1
    spec:
      imagePullSecrets:
      - name: donghyun-fastapi-secret
      nodeSelector:
        kubernetes.io/hostname: worker1
      containers:
      - name: fastapi-container1
        image: 936433886933.dkr.ecr.ap-northeast-2.amazonaws.com/donghyun-fastapi:app1
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-service1
spec:
  selector:
    app: fastapi1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30081
  type: NodePort
