k8s/ingress-dev/deploy/fastapi-worker2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app2
  labels:
    app: fastapi2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi2
  template:
    metadata:
      labels:
        app: fastapi2
    spec:
      imagePullSecrets:
      - name: donghyun-fastapi-secret
      nodeSelector:
        kubernetes.io/hostname: worker2
      containers:
      - name: fastapi-container2
        image: 936433886933.dkr.ecr.ap-northeast-2.amazonaws.com/donghyun-fastapi:app2
        ports:
        - containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: fastapi-service2
spec:
  selector:
    app: fastapi2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30082
  type: NodePort
