k8s/ingress-dev/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-multi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  # - host: donghyun-fastapi
  #   http:
  - http:
      paths:
      - path: /fastapi1
        pathType: Prefix
        backend:
          service:
            name: fastapi-service1
            port:
              number: 80
      - path: /fastapi2
        pathType: Prefix
        backend:
          service:
            name: fastapi-service2
            port:
              number: 80
